--- a/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/Views/Tasks/Index.cshtml
+++ b/Acme.SimpleTaskApp/src/Acme.SimpleTaskApp.Web/Views/Tasks/Index.cshtml
@@ -16,19 +16,20 @@
     ViewBag.ActiveMenu = "TaskList"; //Matches with the menu name in SimpleTaskAppNavigationProvider to highlight the menu item
 }
 
-<h2>
-    @L("TaskList")
-    <span class="pull-right">
-        @Html.DropDownListFor(
-            model => model.SelectedTaskState,
-            Model.GetTasksStateSelectListItems(LocalizationManager),
-            new
-            {
-                @class = "form-control",
-                id = "TaskStateCombobox"
-            })
-    </span>
-</h2>
+    <h2>
+        @L("TaskList")
+        <span class="pull-right">
+            @Html.DropDownListFor(
+                model => model.SelectedTaskState,
+                Model.GetTasksStateSelectListItems(LocalizationManager),
+                new
+                {
+                    @class = "form-control",
+                    id = "TaskStateCombobox"
+                })
+        </span>
+        <a class="btn btn-primary btn-sm" asp-action="Create">@L("AddNew")</a>
+    </h2>
 
 <div class="row">
     <div>
@@ -39,7 +40,7 @@
                     <span class="pull-right label @Model.GetTaskLabel(task)">@L($"TaskState_{task.State}")</span>
                     <h4 class="list-group-item-heading">@task.Title</h4>
                     <div class="list-group-item-text">
-                        @task.CreationTime.ToString("yyyy-MM-dd HH:mm:ss")
+                        @task.CreationTime.ToString("yyyy-MM-dd HH:mm:ss") | @(task.AssignedPersonName ?? L("Unassigned"))
                     </div>
                 </li>
             }
